[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Card_0102.png" type="Texture" id=1]
[ext_resource path="res://Assets/Card_0103.png" type="Texture" id=2]
[ext_resource path="res://Assets/Card_0104.png" type="Texture" id=3]
[ext_resource path="res://Assets/Card_blood03.png" type="Texture" id=4]
[ext_resource path="res://Assets/Card_0101.png" type="Texture" id=5]
[ext_resource path="res://Assets/Card_blood01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Card_blood02.png" type="Texture" id=7]
[ext_resource path="res://Assets/Card2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Card_0106.png" type="Texture" id=9]
[ext_resource path="res://Assets/Card_0202.png" type="Texture" id=10]
[ext_resource path="res://Assets/Card_0304.png" type="Texture" id=11]
[ext_resource path="res://Assets/Card_0205.png" type="Texture" id=12]
[ext_resource path="res://Assets/Card_0301.png" type="Texture" id=13]
[ext_resource path="res://Assets/Card_0204.png" type="Texture" id=14]
[ext_resource path="res://Assets/Card_0302.png" type="Texture" id=15]
[ext_resource path="res://Assets/Card_0201.png" type="Texture" id=16]
[ext_resource path="res://Assets/Card_0303.png" type="Texture" id=17]
[ext_resource path="res://Assets/Card_0105.png" type="Texture" id=18]
[ext_resource path="res://Assets/Card_0206.png" type="Texture" id=19]
[ext_resource path="res://Assets/Card_0305.png" type="Texture" id=20]
[ext_resource path="res://Assets/Card_0203.png" type="Texture" id=21]
[ext_resource path="res://Assets/Card_0306.png" type="Texture" id=22]
[ext_resource path="res://Scripts/Cards.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "5",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "5",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "5",
"speed": 5.0
} ]

[node name="Card" type="Node2D"]
scale = Vector2( 0.500295, 0.480834 )
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="Blood" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "3"

[node name="Number01" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "6"

[node name="Number02" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "6"

[node name="Number03" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "6"
